--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	}
 	
 	function testAPI(){
-		FB.api('/me?fields=name,email,picture.width(200).height(200),location',function(response){
+		FB.api('/me?fields=name,email,picture.width(200).height(200)',function(response){
 			if(response && !response.error){
 				console.log(response);
 				buildProfile(response);
@@ -123,8 +123,7 @@
 			<div>
 				<h4 id="note">Hi</h4>
 				<h2 id="input1"><b>${user.name}</b></h2>
-				<h6 id="input2"><b>${user.location.name}</b></h6><br/>
-			
+							
 				
 			</div>
 		`;
@@ -200,7 +199,7 @@
 					<fb:login-button
 							id="fb-btn"
 							size="xlarge"
-							scope="public_profile,email,user_location"
+							scope="public_profile,email"
 							onlogin="checkLoginState();">
 						</fb:login-button>
 					</div>
